Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-9877

Opening context menu / list of applicable Quick Fixes too much time

XMLWordPrintable

    • 83bbd534e52437d665b250fe27c3c61e02252e91

      1. Open a somewhat bigger project, like qtcreator.pro or qtbase/src/widgets/widgets.pro
      2. In a header file, add the following class:
        class Yummy : public QObject
        {
            Q_OBJECT
        
        public:
            void a(); // Opening context menu or hitting Alt+Enter here
        };
        
      3. Do what the comment says - it takes several seconds.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kosjar Nikolai Kosjar
            kosjar Nikolai Kosjar
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes